--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,9 @@
 @import '../css/normalize.css';
+@import '../fonts/fonts.css';
 
 @import 'base';
+@import 'media-queries';
 @import 'components';
 @import 'navigation';
+@import 'index';
+@import 'footer';
