--- a/resources/scss/_base.scss
+++ b/resources/scss/_base.scss
@@ -20,6 +20,10 @@ body {
 .container {
     max-width: 1140px;
     margin: 0 auto;
+
+    @include lt-md {
+        padding: 0 16px;
+    }
 }
 
 ul {
@@ -37,6 +41,23 @@ h6,
 p {
     margin: 0;
 }
+
+
+
+h1 {
+    font-family: 'CaslonCP', sans-serif;
+    font-size: 48px;
+    font-weight: 400;
+    line-height: 48px;
+    margin: 0;
+    margin-bottom: 10px;
+
+    @include lt-md {
+        font-size: 38px;
+        line-height: 38px;
+    }
+}
+
 
 h3 {
     font-size: 26px;
