--- a/resources/scss/_navigation.scss
+++ b/resources/scss/_navigation.scss
@@ -33,7 +33,7 @@
         align-items: center;
         gap: 10px;
 
-        .menu {
+        .hamburger {
             display: none;
         }
 
@@ -93,7 +93,7 @@
             padding: 0 16px;
         }
 
-        .leftSide .menu {
+        .leftSide .hamburger {
             display: flex;
         }
 
